--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_downloader: ^1.5.2
   visibility_detector: ^0.1.5
   flutter_barcode_listener: 
-    git: https://github.com/shaxxx/flutter_barcode_listener.git
+    path: ../
 
 
   # The following adds the Cupertino Icons font to your application.
