--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,13 @@
 name: flutter_barcode_listener
-description: Listen for any hardware barcode scanner
-version: 0.0.1
-author: Integrator Dubrovnik
-homepage: http://www.integrator.hr
+description: Listen for any hardware barcode scanner without any manufacturer SDK
+version: 0.0.3
+homepage: https://github.com/shaxxx/flutter_barcode_listener
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
-  rxdart: ^0.24.1
   flutter:
     sdk: flutter
 
