--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -25,8 +25,8 @@ dependencies:
     sdk: flutter
 
   shared_preferences: ^2.0.3
-  bloc: ^6.1.0
-  flutter_bloc: ^6.1.0  
+  bloc: ^7.1.0
+  flutter_bloc: ^7.1.0  
   quiver: ^3.0.0
   package_info: ^2.0.0
   connectivity: ^3.0.2
@@ -34,7 +34,7 @@ dependencies:
   http: ^0.13.0
   version: ^1.2.0
   flutter_downloader: ^1.5.2
-  visibility_detector: ^0.2.0-nullsafety.1
+  visibility_detector: ^0.2.0
   flutter_barcode_listener: 
     path: ../
 
@@ -46,8 +46,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  bloc_test: ^7.1.0
-  mockito: ^4.1.3
   pedantic: ^1.0.0
   flutter_launcher_icons: ^0.9.0
 flutter_icons:
