--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,30 +24,30 @@ dependencies:
   flutter:
     sdk: flutter
 
-  shared_preferences: ^2.0.3
-  bloc: ^7.1.0
-  flutter_bloc: ^7.1.0  
-  quiver: ^3.0.0
-  package_info: ^2.0.0
-  connectivity: ^3.0.2
-  uuid: ^3.0.1
-  http: ^0.13.0
-  version: ^1.2.0
-  flutter_downloader: ^1.5.2
-  visibility_detector: ^0.2.2
+  shared_preferences: ^2.2.2
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3  
+  quiver: ^3.2.1
+  package_info: ^2.0.2
+  connectivity: ^3.0.6
+  uuid: ^4.1.0
+  http: ^1.1.0
+  version: ^3.0.2
+  flutter_downloader: ^1.11.4
+  visibility_detector: ^0.4.0+2
   flutter_barcode_listener: 
     path: ../
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pedantic: ^1.0.0
-  flutter_launcher_icons: ^0.9.0
+  pedantic: ^1.11.1
+  flutter_launcher_icons: ^0.13.1
 flutter_icons:
   image_path_android: "assets/icons/BRUM_1024_1024_Android.png"
   image_path_ios: "assets/icons/BRUM_1024_1024_iOS.png"
